force-app/main/default/objects/Discounts_Applied__c/Discounts_Applied__c.object-meta.xml
<CustomObject>
    <label>Discounts Applied</label>
    <nameField>
        <displayFormat>DISAPP-{0000}</displayFormat>
        <label>Discounts Appiled Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discounts Applied</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>