force-app/main/default/objects/Discounts_Applied__c/fields/Discount_Parent__c.field-meta.xml
<CustomField>
    <fullName>Discount_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount Parent</label>
    <referenceTo>Discount__c</referenceTo>
    <relationshipLabel>Discounts Applied</relationshipLabel>
    <relationshipName>Discounts_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>