force-app/main/default/objects/Discounts_Applied__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Discounts Applied</relationshipLabel>
    <relationshipName>Discounts_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>