force-app/main/default/objects/Discounts_Applied__c/fields/PSF_Amount__c.field-meta.xml
<CustomField>
    <fullName>PSF_Amount__c</fullName>
    <label>PSF Amount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>