force-app/main/default/objects/Discounts_Applied__c/fields/Quotation__c.field-meta.xml
<CustomField>
    <fullName>Quotation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quotation</label>
    <referenceTo>Quotation__c</referenceTo>
    <relationshipLabel>Discounts Applied</relationshipLabel>
    <relationshipName>Discounts_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>