force-app/main/default/objects/Discounts_Applied__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Armed Forces</fullName>
            </value>
            <value>
                <fullName>Floor Rise</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>Spin the wheel</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Referral Discount</fullName>
            </value>
            <value>
                <fullName>Corporate - Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>