force-app/main/default/objects/Discounts_Applied__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PSF</fullName>
            </value>
            <value>
                <fullName>Lumpsum</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>User Defined</fullName>
            </value>
            <value>
                <fullName>Percentage Of Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>